--- a/trunk/Econopolio/WebContent/css/style.css
+++ b/trunk/Econopolio/WebContent/css/style.css
@@ -2,28 +2,72 @@
 
 body{
 	background-color: #525252;
+	/*font-family: Arial, Helvetica, sans-serif;*/
+	font-family: Verdana,Arial,sans-serif;
 }
 
 .section{
-	border: 2px solid black;
-	height: 700px;
+	height: 600px;
 	width: 300px;
 	margin: 10px 6px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
 }
 
 .left{
 	float: left;
-	background-color: blue;
+	background-color: #3E3E3E;
 }
 
 .center{
 	display: block;
 	text-align: center;
 	float: left;
-	width: 600px;
+	/*width: 600px;*/
 }
 
 .right{
 	float: right;
-	background-color: red;
+	background-color: #3E3E3E;
+}
+
+#player{
+	background-color: black;
+	height: 120px;
+	color: white;
+	padding: 30px 20px 0;
+	-moz-border-radius-topleft: 10px;
+	-moz-border-radius-topright: 10px;
+	-webkit-border-radius: 10px 10px 0 0;
+}
+
+#game{
+	padding: 30px 20px;
+	margin: 2px;
+}
+
+#playerName, #playerJob, #playerCompany{
+	margin: 2px;
+}
+
+.bold{
+	font-weight: bold;
+}
+
+#controls div{
+	margin: 25px;
+}
+
+#caraDado{
+	width: 50px;
+	height: 50px;
+	background: url("../media/dice1.png") no-repeat scroll 0;
+}
+
+.success{
+	color: #2E7DB2;
+}
+
+.fail{
+	color: red;
 }
