--- a/trunk/Econopolio/WebContent/css/style.css
+++ b/trunk/Econopolio/WebContent/css/style.css
@@ -6,8 +6,13 @@ body{
 	font-family: Verdana,Arial,sans-serif;
 }
 
-#player{
-	
+#playerIcon{
+	left: 0;
+	top: 0;
+	width: 64px;
+	height: 72px;
+	position: absolute;
+	background: url(../media/player.gif) no-repeat;	
 }
 
 .section{
