--- a/trunk/Econopolio/WebContent/css/style.css
+++ b/trunk/Econopolio/WebContent/css/style.css
@@ -96,3 +96,11 @@ body{
 	float: right;
 	margin-top: 30px;
 }
+
+.questionOption{
+	color: white;
+}
+
+.questionOption:hover{
+	color: #2E7DB2; 
+}
